# life-limit

./: Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflow/: gh-pages.yml
.github/workflows/: gh-pages.yml
docs/: birth.js  day.html  index.html  month.html
src/: birth.js  day.html  hour.html  index.html  main.py  month.html  week.html
src/js/: calculateDays.js  calculateMonths.js  calculateWeeks.js
src/libs/: calculate_age.py  days_until_90.py
src/routers/: birth.py  life.py  limit.py  root.py
src/schemas/: life.py  limit.py
static/: life.css
templates/: birth.html  index.html  life.html  limit.html
